fix: scrollbar for basket (#1968)

--- a/src/renderer/app/index.css
+++ b/src/renderer/app/index.css
@@ -65,3 +65,7 @@ ul:focus-visible {
   left: 0;
   top: 0;
 }
+
+.scrollbar-stable {
+  scrollbar-gutter: stable both-edges;
+}
